# OM1-ros2-sdk

./: .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
booster/K1_sdk/: package.xml  setup.cfg  setup.py
booster/k1_sdk/: package.xml  setup.cfg  setup.py
docs/: API.md  DEPLOYMENT.md  G1.md  GAZEBO.md  GO2.md  ISAAC_SIM.md  TRON.md
explore_lite_py/: package.xml  setup.cfg  setup.py
explore_lite_py/explore_lite_py/: costmap_client.py  explore.py  frontier_search.py
explore_lite_py/launch/: explore.launch.py
frontier_explorer/: package.xml  setup.py
frontier_explorer/frontier_explorer/: costmap_client.py  explore.py  frontier_search.py
frontier_explorer/launch/: explore.launch.py
g1_sdk/: setup.py
g1_sdk/g1_sdk/: g1_jointstate.py  g1_loco_action.py  g1_nav2_api.py  g1_teleop.py
g1_sdk/launch/: nav2_launch.py  slam_launch.py
go2_auto_dock/: setup.py
go2_auto_dock/go2_auto_dock/: apriltag_detector.py  go2_apriltag_detector.py  go2_camera_show_img.py  go2_camera_with_adjustable_publisher.py  go2_dock.py  go2_initial_turn_welcome.py  go2_nav_to_charger.py  go2_nav_to_charger_final.py  go2_sim_charger.py  go2_tag_charger.py  go2_tag_follower.py
go2_gazebo_sim/: README.md
go2_isaac_sim/: README.md  run.py  utils.py
go2_sdk/: package.xml  setup.py
go2_sdk/config/: nav2_params.yaml  (+3 more)
om_common/: package.xml  setup.cfg  setup.py
tron_sdk/: package.xml
unitree_common/: package.xml  setup.cfg  setup.py
watchdog/: watch_sensor.py
zenoh/: zenoh_bridge_config.json5
(+129 files in other folders)
